--- a/charts/artifactd-self-hosted/Chart.yaml
+++ b/charts/artifactd-self-hosted/Chart.yaml
@@ -19,7 +19,4 @@ maintainers:
 
 icon: https://github.com/artifactd-io/public-assets/blob/master/artifacted.png
 
-dependencies: 
-  - name: postgres
-    repository: oci://registry-1.docker.io/bitnamicharts/postgresql
-    version: 16.7.21
+dependencies: []
