--- a/charts/artifactd-self-hosted/values.yaml
+++ b/charts/artifactd-self-hosted/values.yaml
@@ -53,12 +53,98 @@ artifactd:
   # @default -- `{}`<br> Helm chart automatically adds `app: {{ .Values.artifactd.name }}`
   labels: {}
 
+  image:
+    # -- Repository containing the Artifactd image to deploy
+    repository: ghcr.io/artifactd-io/artifactd-oss
+
+    # -- For production use it is recommended that you pin a [specific tag](https://github.com/artifactdio/artifactd/pkgs/container/terrat-oss/versions)
+    tag: "latest"
+
+    # -- Set this to `Always` if `artifactd.image.tag` = `latest` to bust the Kubernetes image cache
+    pullPolicy: Always
+
+  # -- `artifactd.imagePullSecrets` merges with `global.imagePullSecrets`<br><br>
+  # Overrides `global.imagePullSecrets` if conflicting
+  imagePullSecrets: []
+
+  resources:
+    limits:
+      cpu: 500m
+      memory: 512Mi
+    requests:
+      cpu: 250m
+      memory: 512Mi
+
+
   service:
+    # -- A Service for Artifactd is deployed by default
     enabled: true
+
+    # -- The name of the Service created for Artifactd.
+    # Defaults to `artifactd.name` if undefined
     name: ""
 
+    # -- `artifactd.service.annotations` merges with `global.annotations` & `global.artifactd.annotations`<br><br>
+    # Overrides `global.annotations` & `global.artifactd.annotations` if conflicting
     annotations: {}
+
+    # -- `artifactd.service.labels` merges with `global.labels` & `global.artifactd.labels`<br><br>
+    # Overrides `global.labels` & `global.artifactd.labels` if conflicting
+    # @default -- `{}`<br> Helm chart automatically adds `app: {{ .Values.artifactd.name }}`
     labels: {}
+
+    # -- ClusterIP doesn't expose a port, NodeIP exposes an external port on all nodes to the world
+    type: ClusterIP
+
+    # -- The port the service will expose
+    port: 8080
+
+    # -- NodePort should only be defined if `artifactd.service.type` = `"NodePort"`.<br>
+    # If undefined, Kubernetes will pick a random port in the `30000`-`32767` range
+    nodePort: ""
+
+  autoscaler:
+    # -- Optionally deploy a HorizontalPodAutoscaler.
+    # Supersedes `.Values.artifactd.replicaCount`
+    enabled: false
+    name: "hpa"
+
+    # -- The minimum number of replicas to deploy.<br><br>
+    # During initial install, we recommend deploying a single pod for DB migrations to succeed. You can increase the replicas after the initial DB migration successfully completes.
+    minReplicas: 1
+
+    # -- The maximum number of replicas to deploy.<br><br>
+    # During initial install, we recommend deploying a single pod for DB migrations to succeed. You can increase the replicas after the initial DB migration successfully completes.<br><br>
+    # Note: setting maxReplicas = minReplicas can trigger Alertmanager HPA maxed alerts
+    maxReplicas: 1
+
+    # -- The metrics to use to calculate scaling operations
+    # @default -- 60% CPU & memory utilization
+    metrics:
+      - type: Resource
+        resource:
+          name: cpu
+          target:
+            type: Utilization
+            averageUtilization: 60
+      - type: Resource
+        resource:
+          name: memory
+          target:
+            type: Utilization
+            averageUtilization: 60
+
+    # -- The operations to apply after calculating scaling metrics
+    behavior: {}
+
+  # -- Number of Artifactd pods to deploy.<br><br>
+  # Artifactd horizontally scales, you are effectively [limited by your DB's available resources](https://docs.artifactd.io/self-hosted/best-practices/#scaling-considerations)<br><br>
+  # This field is ignored if `.Values.artifactd.autoscaling` = `true`
+  replicaCount: 1
+
+  # -- Maximum number of historical ReplicaSets to keep.
+  # This can be useful for troubleshooting previous failed deployments
+  revisionHistoryLimit: 2
 
 
 ##
